# -

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
data/: README.md  data_cards.md
data/processed/: dfuc_image_index.csv  nhanes_risk_base.csv  nhanes_risk_features.csv
data/raw/dfuc/: README.md
data/raw/nhanes/: LEXPN_C.XPT  README.md
data/raw/standup/: README.md
data/schema/: dataset_schema.yaml  field_mapping.csv  knowledge_graph_seed.json
docs/: data_acquisition_guide.md  ppt_outline.md  project_framework.md  project_plan.md
scripts/: fetch_nhanes.ps1  fetch_nhanes.sh  predict_dfuc_baseline.py  prepare_dfuc_index.py  prepare_nhanes.py  prepare_nhanes_features.py  rebuild_env.ps1  train_dfuc_baseline.py
src/diabetic_foot_agent/: __init__.py  dfuc_model.py  dfuc_reference.py  extension_data.py  image_analysis.py  knowledge_graph.py  models.py  nhanes_reference.py  reporting.py  risk_assessment.py
tests/: test_core.py
